# catabra

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  env.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
catabra/: __init__.py  __main__.py  __version__.py
catabra/analysis/: __init__.py  config.py  grouped_split.py  main.py
catabra/application/: __init__.py  main.py
catabra/automl/: base.py  fitted_ensemble.py  fixed_pipeline.py
catabra/automl/askl/: __init__.py  backend.py  explanation.py  scorer.py
catabra/automl/askl/addons/: xgb.py
catabra/base/: __init__.py  base.py  config.py  io.py  paths.py
catabra/calibration/: __init__.py  main.py
catabra/core/: __init__.py  base.py  config.py  io.py  paths.py
catabra/evaluation/: __init__.py  config.py  main.py
catabra/explanation/: __init__.py  base.py  main.py  sklearn_explainer.py
catabra/explanation/_permutation/: __init__.py  backend.py
catabra/explanation/_shap/: __init__.py  backend.py  kernel_explainer.py
catabra/monitoring/: base.py
catabra/monitoring/_plotly/: __init__.py  backend.py
catabra/ood/: __init__.py  base.py  internal.py  pyod.py  utils.py
catabra/ood/internal/: __init__.py  autoencoder.py  bins_detector.py  ks_test.py  soft_brownian_offset.py
catabra/util/: bootstrapping.py  common.py  config.py  encoding.py  io.py  logging.py  longitudinal.py  metrics.py  paths.py  plotting.py  preprocessing.py  resampling.py  split.py  statistics.py  summary.py  table.py
catabra/util/longitudinal/: __init__.py  _misc.py  _resampling.py
catabra/util/plotting/: __init__.py  _common.py  _matplotlib.py  _plotly.py  red_blue.pkl
catabra/util/statistics/: __init__.py  _delong.py  _misc.py
catabra/util/time_series/: __init__.py  _misc.py
doc/: cli.md  config.md  explanations.md  metrics.md  ood.md  plots.md
doc/md/: cli.md  config.md  metrics.md  plots.md  statistics.md
doc/sphinx-docs/source/: about.rst  conf.py  extensions.rst  index.rst  intro.rst  short_examples.rst  walk_through.rst
doc/sphinx-docs/source/app_docs/: README.md  cli_link.rst  config_link.rst  explanations_link.rst  metrics_link.rst  ood_link.rst  plots_link.rst  quick_start.rst  statistics_link.rst
doc/sphinx-docs/source/jupyter/: README.md  automl_config.nblink  automl_extension.nblink  explanation_extension.nblink  fixed_pipeline.nblink  house_sales_regression.nblink  longitudinal.nblink  ood_extension.nblink  performance_metrics.nblink  plotting.nblink  prediction_tasks.nblink  workflow.nblink
doc/sphinx-docs/source/modules/: analysis.rst  application.rst  calibration.rst  core.rst  evaluation.rst  explanation.rst  ood.rst  util.rst
example_data/: README.md  breast_cancer.csv
examples/: AutoML-Config.ipynb  AutoML-Extension.ipynb  Binary-Classification.ipynb  Explanation-Extension.ipynb  Fixed-Pipeline.ipynb  House-Sales-Regression.ipynb  Longitudinal.ipynb  OOD-Extension.ipynb  Performance-Metrics.ipynb  Plotting.ipynb  Prediction-Tasks.ipynb  Workflow.ipynb
test/: __init__.py  util.py
test/test_analysis/: test_train.py  util.py
test/test_components/: test_ood.py  test_sklearn_explainer.py
test/test_components/test_time_series/: test_group_temporal.py  test_make_windows.py  test_prev_next_values.py  test_resample_eav.py  test_resample_interval.py  util.py
test/test_documentation/: patch_notebooks.py  test_markdown.py
test/test_integration/: test_train.py  test_workflow.py  util.py
test/test_resampling/: test_resample_eav.py  test_resample_interval.py  util.py
test/test_time_series/: test_group_temporal.py  test_prev_next_values.py  test_resample_eav.py  test_resample_interval.py  util.py
