[tool.poetry]
name = "catabra"
version = "0.1.0"
description = "CaTabRa is a Python package for analyzing tabular data in a largely automated way"
authors = ["RISC Software GmbH"]
license = "Apache 2.0 with Commons Clause"
readme = "README.md"
repository = "https://github.com/risc-mi/catabra"
packages = [
    {include = "catabra"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
llvmlite = "0.38.0"
shap = "^0.41.0"
auto-sklearn = "^0.14.6"
pandas = "^1.4.1"
tables = "^3.6.1"
xlrd = "^2.0.1"
xlsxwriter = "^3.0.2"
openpyxl = "^3.0.9"
matplotlib = "^3.4.3"
numpy = "^1.21.5"
numba = "^0.55.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-subtests = "^0.10.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
dask = "^2023.2.1"

[tool.poetry_bumpversion.file."catabra/__version__.py"]

[tool.pytest_ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
test_paths = ['test']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
